sample/error/top_prohibited-import_as.bfr
// web playgroundでは禁止
module Lib = import "../lib.bfr"

codegen []